# Face-Segmentation

./: .gitignore  1. Analyze Dataset.ipynb  2. Training Loop.ipynb  CMakeLists.txt  cg_Dataset.py  compartments.h  definition.cpp  emotions.json  main.cpp  readme.md
Retired_CPP_Code/: CMakeLists.txt  compartments.h  definition.cpp  main.cpp
Training/: 1. Analyze Dataset.ipynb  2. Training Loop.ipynb  cg_Dataset.py
